# DebateAnalyzer

./: .gitignore  README.md
audio_model/: .gitignore  ENVIRONMENT_SETUP.md  GPU_MEMORY_GUIDE.md  GRADIENT_CHECKPOINTING_FIX.md  README.md  README.old.md  TRAIN_SUBSET_FEATURE.md  __init__.py  environment.yml  main.py  project_config.py  pyproject.toml
audio_model/whisper-train/: README.md  main.py  pyproject.toml
audio_model/whisper-train/whisper_train/: __init__.py  config.py  preprocessor.py  trainer.py
audio_model/youtube-scraper/: README.md  env-data-manipulation.yml  main.py  pyproject.toml  verify_config.py
audio_model/youtube-scraper/data/finder_data/: default_queries.json
audio_model/youtube-scraper/debate_finder/: __init__.py  config.py  finder.py  transcript.py  youtube.py
audio_model/youtube-scraper/debate_scraper/: __init__.py  config.py  downloader.py  metadata.py  scraper.py  transcript_fetcher.py
debate_analyzer/: test.py
debate_analyzer/diarization/: alignment.py  diarizer.py
